k8s/namespace-development.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: "app-deployment"
  labels:
    name: "t0"
