k8s/deployment-mysql.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql
  namespace: t0
  labels:
    app: mysql
    version: "1.0"
    environment: testing
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mysql
      version: "1.0"
      environment: testing
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: mysql
        version: "1.0"
        environment: testing
    spec:
      containers:
        - image: mysql:5.7
          name: mysql
          ports:
            - containerPort: 3306
              name: mysql
          volumeMounts:
            - name: data
              mountPath: /var/lib/mysql
  volumeClaimTemplates:
  - apiVersion: v1
    kind: PersistentVolumeClaim
    metadata:
      creationTimestamp: null
      name: data
    spec:
      accessModes:
      - ReadWriteOnce
      resources:
        requests:
          storage: 20Gi
      storageClassName: nfs-disk
      volumeMode: Filesystem
