k8s/service-mysql.yaml
kind: Service
apiVersion: v1
metadata:
  name: mysql-service
  namespace: t0
  labels:
    app: mysql
    version: "1.0"
    environment: testing
spec:
  selector:
    app: mysql
    version: "1.0"
    environment: testing
  ports:
  - port: 3306
  clusterIP: None
