k8s/service-spring3hibernate.yaml
kind: Service
apiVersion: v1
metadata:
  name: spring3hibernate-service
  namespace: t0
  labels:
    app: spring3hibernate
    version: "1.0"
    environment: testing
spec:
  selector:
    app: spring3hibernate
    version: "1.0"
    environment: testing
  type: ClusterIP
  ports:
  - name: http
    port: 8080
    protocol: TCP
    targetPort: 8080
