k8s/Ingress-spring3hibernate.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: spring3hibernate-service
  namespace: t0
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: app.t0
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: spring3hibernate-service
            port:
              number: 8080
